--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="carousel-bg" style="background-image: url(./img/home2/carousel-banner2.jpg);">
+                    <div class="carousel-bg" style="background-image: url(./img/home2/internacion.png.crdownload);">
                         <div class="container">
                             <div class="row flex flex-middle fitscreen">
                                 <div class="col-xs-12">
@@ -132,9 +132,9 @@ La experiencia y conociemiento alcanzados en internación domiciliaria, área ho
                     <div class="row">
                         <div class="col-md-5 col-sm-12">
                             <div class="feture-img-box">
-                                <img class="img-1" src="img/home2/team-member1.jpg" alt="">
-                                <img class="img-2" src="img/home2/team-member2.jpg" alt="">
-                                <img class="img-3" src="img/home2/team-member3.jpg" alt="">
+                                <img class="img-1" src="img/home2/tubomarvel.jfif" alt="">
+                                <img class="img-2" src="img/home2/concentradoryu.jpg" alt="">
+                                <img class="img-3" src="img/home2/tuboarg.jfif" alt="">
                             </div>
                         </div>
                         <div class="col-md-7 col-sm-12">
@@ -287,17 +287,17 @@ La experiencia y conociemiento alcanzados en internación domiciliaria, área ho
                             </div>
                         </div>
                     </div>
-                    <div class="grid-item ventilacion col-md-3 col-sm-6 col-xs-12">
+                    <div class="grid-item sueno col-md-3 col-sm-6 col-xs-12">
                         <div class="work-image">
                             <a href="bibap.html" class="ajax-popup-link">
                                 <div class="image">
-                                    <img src="img/home2/bibap.jpg" alt="">
+                                    <img src="img/home2/bpap4.png" alt="">
                                     <div class="overlay overlay-bg"></div>
                                 </div>
                             </a>
                             <div class="img-desc">
-                                <h3><a href="bibap.html" class="ajax-popup-link">Bibap</a></h3>
-                                <p>BIBAP</p>
+                                <h3><a href="bibap.html" class="ajax-popup-link">Bpap</a></h3>
+                                <p>BPAP</p>
                             </div>
                         </div>
                     </div>
@@ -310,7 +310,7 @@ La experiencia y conociemiento alcanzados en internación domiciliaria, área ho
                                 </div>
                             </a>
                             <div class="img-desc">
-                                <h3><a href="bibap-automatico.html" class="ajax-popup-link">Bibap</a></h3>
+                                <h3><a href="bibap-automatico.html" class="ajax-popup-link">Bpap</a></h3>
                                 <p>AUTOMÁTICO</p>
                             </div>
                         </div>
